form background and collapsed header fixed

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -38,7 +38,7 @@
     padding: 6px 10px;
     border: 3px solid #f2e9e4;
     border-radius: 5px;
-    background-color: rgb(187, 186, 186);
+    background-color: rgb(228, 228, 228);
     color: black;
     font-weight: 800;
     width: 50%;
