--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -82,7 +82,7 @@
     background-color: #f2e9e4;
     z-index: 99;
     right: 3px;
-    top: 50px;
+    top: 60px;
     display: flex;
     flex-direction: column;
     border-radius: 0 0 10px 10px;
